# probitlcm

./: CMakeLists.txt  README.rst  pyproject.toml
dependencies/armadillo-code/: ArmadilloConfig.cmake
dependencies/armadillo-code/InstallFiles/: ArmadilloConfig.cmake
dependencies/armadillo-code/tmp/include/armadillo_bits/: config.hpp
dependencies/armadillo-code/tmp/misc/: armadillo.pc
docs/: _core.rst  conf.py  index.rst  py_files.rst  unused.txt
src/: crosscounts.cpp  crosscounts.hpp  datagen.cpp  datagen.hpp  file_io.cpp  file_io.hpp  generate_covariates.cpp  generate_covariates.hpp  initializations.cpp  initializations.hpp  latent_state_related.cpp  latent_state_related.hpp  log_of_norm_cdf.cpp  log_of_norm_cdf.hpp  mvnorm.cpp  mvnorm.hpp  python_connection.cpp  qnorm.cpp  qnorm.hpp  run_mcmc.cpp  run_mcmc.hpp  sampling.cpp  sampling.hpp  sampling_cowles.cpp  sampling_cowles.hpp  sampling_generic.cpp  sampling_generic.hpp  struct_datagenvals.hpp  struct_mcmcdraws.hpp  struct_othervals.hpp
src/python/: build_report_all_scenarios.py  convergence_test.py  convergence_test_failures.py  data_analysis_report_single_chain.py  data_analysis_run.py  data_analysis_run_single_chain.py  exec_numpy.py  hyperparam_tuning.py  posterior_predictive_check.py  report_helpers.py  run_helpers.py  scenario_launch.py  scenario_replics_postprocess.py  scenario_report_overall.py  scenario_report_single_replic.py  scenario_run_single_replic.py
templates/: replication_crosssec_template.html  scenario_crosssec_template.html
